// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flowchart-stroke-type-field Renders \`flowchart-stroke-type-field\` with custom props 1`] = `
<div
  class="layout row justify-space-between align-center"
>
  <label
    aria-hidden="true"
    class="v-label theme--light"
    style="left: 0px; position: relative;"
  >
    Custom label
  </label>
  <div
    class="flex xs3"
  >
    <div
      class="v-input mt-0 pt-0 v-text-field v-select v-input--hide-details theme--light"
      role="combobox"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <input
                aria-readonly="false"
                autocomplete="on"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
          <div
            class="v-menu"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flowchart-stroke-type-field Renders \`flowchart-stroke-type-field\` with custom props 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="4"
            width="50"
          >
            <line
              stroke="currentColor"
              stroke-width="4"
              x1="0"
              x2="100%"
              y1="0"
              y2="0"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="4"
            width="50"
          >
            <line
              stroke="currentColor"
              stroke-dasharray="4 4"
              stroke-width="4"
              x1="0"
              x2="100%"
              y1="0"
              y2="0"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`flowchart-stroke-type-field Renders \`flowchart-stroke-type-field\` with default props 1`] = `
<div
  class="layout row justify-space-between align-center"
>
  <label
    aria-hidden="true"
    class="v-label theme--light"
    style="left: 0px; position: relative;"
  >
    
  </label>
  <div
    class="flex xs3"
  >
    <div
      class="v-input mt-0 pt-0 v-text-field v-select v-input--hide-details theme--light"
      role="combobox"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <input
                aria-readonly="false"
                autocomplete="on"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
          <div
            class="v-menu"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flowchart-stroke-type-field Renders \`flowchart-stroke-type-field\` with default props 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="4"
            width="50"
          >
            <line
              stroke="currentColor"
              stroke-width="4"
              x1="0"
              x2="100%"
              y1="0"
              y2="0"
            />
          </svg>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <svg
            height="4"
            width="50"
          >
            <line
              stroke="currentColor"
              stroke-dasharray="4 4"
              stroke-width="4"
              x1="0"
              x2="100%"
              y1="0"
              y2="0"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;
